objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>ClickDeploy</fullName>
        <description>ClickDeploy sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Trial</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Credits Assignment</fullName>
        <description>Only for credit assignments and automated payments</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <description>Default Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Existing</fullName>
        <description>Existing customers/Renewal</description>
        <isActive>true</isActive>
        <values>
            <fullName>Best Case</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>New Context</fullName>
        <description>This Sales Process is Created For New Context</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Scope Validation</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Work at Risk</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__Expansion Sales Process</fullName>
        <description>Expansion Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__New Sales Process</fullName>
        <description>New Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>kuga_sub__Renewal Sales Process</fullName>
        <description>Renewal Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Formal Proposal</fullName>
        </values>
        <values>
            <fullName>Fully Paid</fullName>
        </values>
        <values>
            <fullName>Marketing Qualification</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Partially Paid</fullName>
        </values>
        <values>
            <fullName>Signed Contract Received</fullName>
        </values>
        <values>
            <fullName>Solution Alignment</fullName>
        </values>
        <values>
            <fullName>Solution Validation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <formula>MRR__c * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR is the MRR * 12</inlineHelpText>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Academy_Amount__c</fullName>
        <label>Academy Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Family__c</field>
            <operation>equals</operation>
            <value>Academy</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agreement__c.Type__c</field>
                <operation>equals</operation>
                <value>MSA</value>
            </filterItems>
            <filterItems>
                <field>Agreement__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <infoMessage>Please select the Opportunity Account or the Opportunity Parent Account&apos;s MSA Agreement.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alliances_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Partner Development Manager working with the Partner on this deal</inlineHelpText>
        <label>PDM Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesAlliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_Copado_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick to assign opportunity to appropriate AE</inlineHelpText>
        <label>Assign Copado AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_PB_Date__c</fullName>
        <label>Automatic PB Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Backend__c</fullName>
        <label>Backend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Backend</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Best_Relationship_Score__c</fullName>
        <label>Best Relationship Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Best_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Best Relationship</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Due__c</fullName>
        <label>Total Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Invoiced__c</fullName>
        <label>Total Amount Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Overdue__c</fullName>
        <label>Total Amount Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Amount_Paid__c</fullName>
        <label>Total Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bread_Winner__Total_Draft_Amount__c</fullName>
        <label>Total Draft Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <inlineHelpText>Budget Amount/Allocated Budget</inlineHelpText>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Available_Date__c</fullName>
        <label>Budget Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Drivers__c</fullName>
        <inlineHelpText>Why would this prospect buy Copado?</inlineHelpText>
        <label>Business Drivers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLA_Sent_Under_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copado License Agreement has been sent and is under review.</inlineHelpText>
        <label>CLA Sent/Under Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COVID_19_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COVID-19 Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To show the Campaign Name on Opportunity.</description>
        <inlineHelpText>Related Campaign Name</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Champion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who will sell on your behalf inside the company?</description>
        <inlineHelpText>Who will sell on your behalf inside the company?</inlineHelpText>
        <label>Champion</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Expiry_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Start_Date__c</fullName>
        <label>ClickDeploy Enterprise Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Enterprise_Trial_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickDeploy Enterprise Trial Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Salesforce_Org_Id__c</fullName>
        <label>ClickDeploy Salesforce Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Team_Subscription_ID__c</fullName>
        <label>ClickDeploy Team Subscription ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Deploy_This_Month__c</fullName>
        <label>ClickDeploy Total Deploy This Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_Total_Success_Deploy_Attempt__c</fullName>
        <label>ClickDeploy Total Success Deploy Attempt</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClickDeploy_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>ClickDeploy User Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Reason__c</fullName>
        <description>This Field is created as Qentinel data Migration</description>
        <label>Closed Won Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <label>Commission Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2,500</fullName>
                </value>
                <value>
                    <fullName>2,501-5,000</fullName>
                </value>
                <value>
                    <fullName>5,001-7,500</fullName>
                </value>
                <value>
                    <fullName>7,501-10,000</fullName>
                </value>
                <value>
                    <fullName>10,001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitive_Status__c</fullName>
        <description>This is the competitive status in this opportunity. Select Ahead if we are ahead of the competition. Select Behind if we are behind the competition. Select Even if we are even with the competition</description>
        <inlineHelpText>This is the competitive status in this opportunity. Select Ahead if we are ahead of the competition. Select Behind if we are behind the competition. Select Even if we are even with the competition</inlineHelpText>
        <label>Competitive Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ahead</fullName>
                </value>
                <value>
                    <fullName>Even</fullName>
                </value>
                <value>
                    <fullName>Behind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <referenceTo>Competitor__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copado_AE_to_Assign__c</fullName>
        <inlineHelpText>This is the identified Copado AE based on territory assignments</inlineHelpText>
        <label>Copado AE to Assign</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Current_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Action__c</fullName>
        <inlineHelpText>Please enter what you are currently doing for this opportunity. Then enter next steps.</inlineHelpText>
        <label>Current Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Align Customer Stakeholders</fullName>
                </value>
                <value>
                    <fullName>Backchannel to customer</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>MSA - Copado</fullName>
                </value>
                <value>
                    <fullName>MSA - Customer</fullName>
                </value>
                <value>
                    <fullName>MSA - Joint Review</fullName>
                </value>
                <value>
                    <fullName>NDA - Copado</fullName>
                </value>
                <value>
                    <fullName>NDA - Create NDA</fullName>
                </value>
                <value>
                    <fullName>NDA - Customer</fullName>
                </value>
                <value>
                    <fullName>NDA - Deliver NDA</fullName>
                </value>
                <value>
                    <fullName>NDA - Fully Executed</fullName>
                </value>
                <value>
                    <fullName>NDA - Joint Review</fullName>
                </value>
                <value>
                    <fullName>NDA - Review NDA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Schedule Call</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>SOW - Arrange Scoping Meeting</fullName>
                </value>
                <value>
                    <fullName>SOW - Copado Legal Review</fullName>
                </value>
                <value>
                    <fullName>SOW - Create Proposal</fullName>
                </value>
                <value>
                    <fullName>SOW - Creation</fullName>
                </value>
                <value>
                    <fullName>SOW - Customer Review</fullName>
                </value>
                <value>
                    <fullName>SOW - Deal Qualification</fullName>
                </value>
                <value>
                    <fullName>SOW - Pre-delivery Negotiation</fullName>
                </value>
                <value>
                    <fullName>SOW - Scoping</fullName>
                </value>
                <value>
                    <fullName>SOW - Strategic Services Review</fullName>
                </value>
                <value>
                    <fullName>Vendor Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting to hear from Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Master_Value_Proposition__c</fullName>
        <formula>DL_VC__Master_Value_Proposition_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Master Value Proposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Value_Proposition_Group__c</fullName>
        <formula>DL_VC__Value_Proposition_Group_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Value Proposition Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Has_Value_Proposition__c</fullName>
        <formula>DL_VC__Value_Proposition_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Value Proposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DL_VC__Master_Value_Proposition_Count__c</fullName>
        <label>Master Value Proposition Count</label>
        <summaryForeignKey>DL_VC__Master_Value_Proposition__c.DL_VC__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Proposition_Count__c</fullName>
        <label>Value Proposition Count</label>
        <summaryForeignKey>DL_VC__VC_Value_Proposition__c.DL_VC__VC_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DL_VC__Value_Proposition_Group_Count__c</fullName>
        <label>Value Proposition Group Count</label>
        <summaryForeignKey>DL_VC__VC_Value_Proposition_Group__c.DL_VC__VPG_Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delivery_Team_Size__c</fullName>
        <label>Delivery Team Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Reporting__c</fullName>
        <formula>IF( Demo__c = TRUE, &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo (Reporting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_To_Close_Duration__c</fullName>
        <formula>CloseDate -  First_Demo_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo To Close Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <formula>NOT(ISBLANK( First_Demo_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_pulled_over_from_lead__c</fullName>
        <inlineHelpText>don&apos;t use on page layouts</inlineHelpText>
        <label>Description (pulled over from lead)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DevOps360_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DevOps360 Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers to the duplicate opportunity when an opportunity is closed duplicate.</inlineHelpText>
        <label>Duplicate Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBQ_Cadence__c</fullName>
        <label>EBQ Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>A5</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>B5</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>E4</fullName>
                </value>
                <value>
                    <fullName>E5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBQ_Completed__c</fullName>
        <label>EBQ Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Connected__c</fullName>
        <label>EBQ Connected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Cycle__c</fullName>
        <formula>EBQ_Completed__c - EBQ_First_Touch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EBQ_First_Touch__c</fullName>
        <label>EBQ First Touch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Rep2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EBQ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EBQ_Set__c</fullName>
        <label>EBQ Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBQ_Touches__c</fullName>
        <formula>CASE( EBQ_Cadence__c,
&quot;A1&quot;, 1,
&quot;A2&quot;, 2,
&quot;A3&quot;, 3,
&quot;A4&quot;, 4,
&quot;A5&quot;, 5,
&quot;B1&quot;, 6,
&quot;B2&quot;, 7,
&quot;B3&quot;, 8,
&quot;B4&quot;, 9,
&quot;B5&quot;, 10,
&quot;C1&quot;, 11,
&quot;C2&quot;, 12,
&quot;C3&quot;, 13,
&quot;C4&quot;, 14,
&quot;C5&quot;, 15,
&quot;D1&quot;, 16,
&quot;D2&quot;, 17,
&quot;D3&quot;, 18,
&quot;D4&quot;, 19,
&quot;D5&quot;, 20,
&quot;E1&quot;, 21,
&quot;E2&quot;, 22,
&quot;E3&quot;, 23,
&quot;E4&quot;, 24,
&quot;E5&quot;, 25,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBQ Touches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>TEXT( Account.Entity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_LOE__c</fullName>
        <description>Determine the level of effort (LOE) or staff needed on the project.</description>
        <inlineHelpText>Insert the number of engineers required.</inlineHelpText>
        <label>Estimated LOE</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpansionOppWarningLeadSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exp Opp Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_ARR__c</fullName>
        <formula>ARR__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ARR * probability to give us the expected value for forecasting purposes.</inlineHelpText>
        <label>Expected ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_MRR__c</fullName>
        <formula>MRR__c * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MRR x probability to give us the expected value for forecasting</inlineHelpText>
        <label>Expected MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Demo_Date__c</fullName>
        <label>First Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Email_Received__c</fullName>
        <label>First Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Email_Sent__c</fullName>
        <label>First Email Sent</label>
        <type>DateTime</type>
    </fields>
</CustomObject>